# opn-api

./: .editorconfig  .gitlab-ci.yml  DEVELOP.md  README.md  pyproject.toml  requirements.txt
opn_api/api/: base.py  client.py
opn_api/api/core/: firmware.py  routes.py  unbound.py
opn_api/api/plugin/: firewall.py  nodeexporter.py
opn_api/client/: client.py
opn_api/client/firewall/: alias_controller.py  filter_controller.py
opn_api/exceptions/: __init__.py  api.py
opn_api/formats/: base.py  cols_output.py  json_filter_output.py  json_output.py  plain_output.py  table_output.py  yaml_output.py
opn_api/parser/: html.py  opnsense_api_reference.py  opnsense_form.py  opnsense_model.py  opnsense_module_list.py  xml.py
opn_api/templates/code_generator/api/: api.py.j2
opn_api/templates/code_generator/command/: command.py.j2  command_facade.py.j2  command_test.py.j2
opn_api/tests/: test_cli.py
opn_api/tests/facades/template_engines/: test_jinja2.py
opn_api/tests/factories/: test_json_type.py
opn_api/tests/factories/code_generator/: test_click_option.py  test_puppet_code_fragment.py
opn_api/tests/formats/: base.py  test_cols_output.py  test_json_filter_output.py  test_json_output.py  test_plain_output.py  test_table_output.py  test_yaml_output.py
opn_api/util/: __init__.py
scripts/: sync_github.sh
src/opn_api/: exceptions.py
src/opn_api/api/: base.py  client.py
src/opn_api/api/core/: configbackup.py  dhcp.py  firewall.py  ipsec.py  routes.py  syslog.py  unbound.py
src/opn_api/client/: __init__.py  client.py
src/opn_api/models/: __init__.py  dhcp.py  firewall_alias.py  firewall_models.py
src/opn_api/tests/: test_client.py
src/opn_api/util/: parse.py
tests/: test_alias_controller.py  test_client.py  test_filter_controller.py
tests/api/: test_client.py  test_firewall_alias.py  test_firewall_filter.py
tests/client/: test_alias_controller_parsing.py  test_alias_controller_transform.py  test_client.py
tests/e2e/: test_e2e.py
tests/mocks/: mock_alias_export.py  mock_alias_get_detail.py  mock_alias_search_item.py
tests/mocks/alias/: __init__.py  mock_alias_get_item.py  mock_firewall_alias_data.py  mock_post_data.py
tests/unit/: test_alias_controller.py  test_filter_controller.py
tests/unit/api/: test_firewall_alias.py  test_firewall_filter.py
tests/unit/client/: test_alias_controller_parsing.py  test_alias_controller_transform.py  test_client.py  test_dhcp_controller.py
(+10 files in other folders)
