[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opn-api"
requires-python = ">=3.11"
dynamic = ["version"]
description = "A Python client library for OPNsense API."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Devin Barry", email = "devinbarry@users.noreply.github.com" },
    { name = "Dylan Turnbull", email = "dylanturn@gmail.com" },
    { name = "Andreas Stürz" },
]
keywords = [
    "OPNsense",
    "API",
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests",
    "pydantic",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
homepage = "https://github.com/andeman/opnsense_cli"
repository = "https://github.com/andeman/opnsense_cli"
documentation = "https://github.com/andeman/opnsense_cli"

[tool.ruff]
line-length = 120

[tool.hatch.version]
path = "src/opn_api/__init__.py"

[tool.hatch.build.targets.sdist]
packages = ["src/opn_api"]

[tool.hatch.build.targets.wheel]
packages = ["src/opn_api"]
